--- a/TicketsControl/tickets/static/css/styles.css
+++ b/TicketsControl/tickets/static/css/styles.css
@@ -33,7 +33,7 @@ body {
     border: none !important;
 }
 footer{
-    background-color: #1d1d1b;
+    background-color: #000000;
 }
 .uppercase-column {
     text-transform: uppercase;
