--- a/TicketsControl/tickets/templates/administracion/admin.html
+++ b/TicketsControl/tickets/templates/administracion/admin.html
@@ -16,7 +16,7 @@
                                     <h5 class="mt-2 text-center fw-bold">AGENTE</h5>
                                 </th>
                                 <th>
-                                    <h5 class="mt-2 text-center fw-bold">NUMERO DE VENTANILLA</h5>
+                                    <h5 class="mt-2 text-center fw-bold">NÚMERO DE VENTANILLA</h5>
                                 </th>
                                 <th style="width: 300px;">
                                     <h5 class="mt-2 text-center fw-bold">COLA DE ATENCION</h5>
@@ -120,7 +120,7 @@
                                     <thead class="table-dark">
                                         <tr>
                                             <th>
-                                                <h5 class="mt-2 text-center fw-bold">CODIGO</h5>
+                                                <h5 class="mt-2 text-center fw-bold">CÓDIGO</h5>
                                             </th>
                                             <th>
                                                 <h5 class="mt-2 text-center fw-bold">DPTO</h5>
@@ -163,7 +163,7 @@
                                     <thead class="table-dark">
                                         <tr>
                                             <th>
-                                                <h5 class="mt-2 text-center fw-bold">CODIGO</h5>
+                                                <h5 class="mt-2 text-center fw-bold">CÓDIGO</h5>
                                             </th>
                                             <th>
                                                 <h5 class="mt-2 text-center fw-bold">DPTO</h5>
@@ -213,7 +213,7 @@
                                     <thead class="table-dark">
                                         <tr>
                                             <th>
-                                                <h5 class="mt-2 text-center fw-bold">CODIGO</h5>
+                                                <h5 class="mt-2 text-center fw-bold">CÓDIGO</h5>
                                             </th>
                                             <th>
                                                 <h5 class="mt-2 text-center fw-bold">DPTO</h5>
@@ -255,7 +255,7 @@
                                     <thead class="table-dark">
                                         <tr>
                                             <th>
-                                                <h5 class="mt-2 text-center fw-bold">CODIGO</h5>
+                                                <h5 class="mt-2 text-center fw-bold">CÓDIGO</h5>
                                             </th>
                                             <th>
                                                 <h5 class="mt-2 text-center fw-bold">DPTO</h5>
@@ -307,6 +307,9 @@
         border-collapse: separate;
         width: 100%;
         border-spacing: 0 4px;
+    }
+    .table-dark{
+        background-color: #000000;
     }
     .colorfilas{
         background-color: white;
