--- a/TicketsControl/tickets/templates/agentes/inicio_atencion.html
+++ b/TicketsControl/tickets/templates/agentes/inicio_atencion.html
@@ -116,17 +116,17 @@
         font-weight: 600;
     }
     .btnStyle1{
-        background-color: #1d1d1b;
+        background-color: #000000;
         color: #ffd142;
         border-radius: 50px;
-        border-color: #1d1d1b;
+        border-color: #000000;
         font-size: 15px;
     }
     .btnStyle2{
-        background-color: #1d1d1b;
+        background-color: #000000;
         color: #ffd142;
         border-radius: 50px;
-        border-color: #1d1d1b;
+        border-color: #000000;
         font-size: 15px;
     }
     .btnStyle3{
@@ -138,12 +138,12 @@
     }
     .btnStyle1:hover {
         background-color: #ffd142;
-        color: #1d1d1b;
+        color: #000000;
         border-color: #ffd142;
     }
     .btnStyle2:hover {
         background-color: #ffd142;
-        color: #1d1d1b;
+        color: #000000;
         border-color: #ffd142;
     }
 </style>
