--- a/TicketsControl/tickets/templates/ticket/digitalticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/digitalticketmaker.html
@@ -7,7 +7,7 @@
             <div class="card border-0 rounded-3 my-5 mx-auto">
                 <div class="card-body pt-5">
                     <h1 class="card-title text-center mb-3 titulo">DEPARTAMENTOS DE ATENCIÓN</h1>
-                    <h4 class="text-center mb-4 titulo2">Seleccione el Departamento al que desea dirigirse</h4>
+                    <h4 class="text-center mb-4 titulo2">Seleccioná el departamento al que deseas dirigirte.</h4>
                     <main class="form-signin">
                         <div class="row">
                             <div class="col-md-6 mb-3">
@@ -81,7 +81,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             <h1 class="modal-title" style="text-align: center; font-weight: 900;"
                                 id="modal_registroTitle">REGISTRO</h1>
-                            <p class="titulo2" style="text-align: center; ">Seleccione el trámite que desea realizar</p>
+                            <p class="titulo2" style="text-align: center; ">Seleccioná el trámite que deseas realizar.</p>
                         </div>
                     </div>
                     <div class="row mb-2">
@@ -266,17 +266,17 @@
     }
 
     .btnStyle {
-        background-color: #1D1D1B;
+        background-color: #000000;
         color: white;
         border-radius: 30px;
-        border-color: #1D1D1B;
+        border-color: #000000;
         width: 100%;
     }
 
     .btnStyle:hover {
-        background-color: #1D1D1B;
+        background-color: #000000;
         color: #ffd142;
-        border-color: #1D1D1B;
+        border-color: #000000;
     }
 
     .btn:focus,
