--- a/TicketsControl/tickets/templates/ticket/ticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/ticketmaker.html
@@ -7,7 +7,7 @@
         <div class="card border-0 cardCol rounded-3 my-5 mx-auto">
             <div class="card-body pt-5 pl-8 pr-8">
                 <h1 class="card-title text-center mb-3 titulo" >DEPARTAMENTOS DE ATENCIÓN</h1>
-                <h4 class="card-title text-center mb-4" style="color: #878787; font-weight: bold;">Seleccione el Departamento al que desea dirigirse</h4>
+                <h4 class="card-title text-center mb-4" style="color: #878787; font-weight: bold;">Seleccioná el departamento al que deseas dirigirte.</h4>
                 <main class="form-signin">
                     <div class="row">
                         <div class="col-md-6 mb-3">
@@ -67,8 +67,8 @@
                     <div class="row">
                         <div class="form-floating" style="margin-bottom: 1px;">
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            <h1 class="modal-title" style="text-align: center; font-weight: 900;" id="modal_registroTitle">REGISTRO</h1>
-                            <p style="text-align: center; font-size: 25px; color: #878787; font-weight: bold;">Seleccione el trámite que desea realizar</p>
+                            <h1 class="modal-title" style="text-align: center; font-weight: 900; color: #000000;" id="modal_registroTitle">REGISTRO</h1>
+                            <p style="text-align: center; font-size: 25px; color: #878787; font-weight: bold;">Seleccioná el trámite que deseas realizar.</p>
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -168,6 +168,7 @@
     .titulo{
         font-weight: 900; 
         font-size: 35px;
+        color: #000000;
     }
 
     body{
@@ -187,16 +188,16 @@
         overflow: hidden;
     }
     .btnStyle {
-        background-color: #1D1D1B;
+        background-color: #000000;
         color: white;
         border-radius: 30px;
-        border-color: #1D1D1B;
+        border-color: #000000;
         font-size: 15px;
     }
     .btnStyle:hover {
-        background-color: #1D1D1B;
+        background-color: #000000;
         color: #ffd142;
-        border-color: #1D1D1B;
+        border-color: #000000;
     }
     .btn:focus,
     .btn:active,
