--- a/TicketsControl/tickets/templates/administracion/colasatencion.html
+++ b/TicketsControl/tickets/templates/administracion/colasatencion.html
@@ -54,13 +54,13 @@
                     <div class="card-body table-responsive px-md-4 px-2 pt-3">
                         <div class="table-responsive-sm">
                             <table id="record-table" style="height: 200px;" class="table table-hover table-fixed-height">
-                                <thead class="table-dark">
+                                <thead class="table-dark1">
                                     <tr>
                                         <th>
                                             <h5 class="mt-2 text-center fw-bold">AGENTE</h5>
                                         </th>
                                         <th>
-                                            <h5 class="mt-2 text-center fw-bold">NUMERO DE VENTANILLA</h5>
+                                            <h5 class="mt-2 text-center fw-bold">NÚMERO DE VENTANILLA</h5>
                                         </th>
                                         <th style="width: 300px">
                                             <h5 class="mt-2 text-center fw-bold">COLA DE ATENCION</h5>
@@ -113,6 +113,14 @@
     </div>
 </div>
 <style>
+    .filas{
+        margin-bottom: 50px;
+        border-spacing: 0 41px;
+    }
+    .table-dark1{
+        background-color: black;
+        color: white;
+    }
     .roundedInput {
         border-radius: 50px;
         text-align: justify;
@@ -126,14 +134,16 @@
         text-align: end;
         font-size: 40px;
         font-weight: 900;
+        color: #000000;
     }
-    table {
+    table.dataTable {
         border-collapse: separate;
         width: 100%;
-        border-spacing: 0 4px;
+        border-spacing: 0 5px;
     }
     .colorfilas{
         background-color: white;
+        border-color: transparent;
     }
     td:first-child,
     th:first-child {
@@ -146,6 +156,43 @@
     }
 </style>
 <script>
+    $(document).ready(function () {
+        $('#record-table').DataTable({
+            select: true,
+            searching: false,
+            language: {
+                "sProcessing": "Procesando...",
+                "sLengthMenu": "Mostrar _MENU_ registros",
+                "sZeroRecords": "No se encontraron resultados",
+                "sEmptyTable": "Ningún dato disponible en esta tabla",
+                "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+                "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
+                "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+                "sInfoPostFix": "",
+                "sSearch": "Buscar:",
+                "sUrl": "",
+                "sInfoThousands": ",",
+                "sLoadingRecords": "Cargando...",
+                "oPaginate": {
+                    "sFirst": "Primero",
+                    "sLast": "Último",
+                    "sNext": "Siguiente",
+                    "sPrevious": "Anterior"
+                },
+                "oAria": {
+                    "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
+                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                },
+                "select": {
+                    "rows": {
+                        "_": "Seleccionado %d filas",
+                        "0": "Haga clic en una fila para seleccionarla",
+                        "1": "Seleccionado 1 fila"
+                    }
+                }
+            }
+        });
+    });
     window.onload = function () {
         cargarAgentes();
     };
