--- a/TicketsControl/tickets/templates/administracion/datosagente.html
+++ b/TicketsControl/tickets/templates/administracion/datosagente.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block nav_header %}
-    {% include 'componentes/navbarheader.html' %}
+{% include 'componentes/navbarheader.html' %}
 {% endblock %}
 {% block background %}
 
@@ -13,7 +13,8 @@
     .fondoFigura {
         width: 100%;
     }
-    .imgFondo{
+
+    .imgFondo {
         background: url('{% static "img/Fondo6.png" %}') no-repeat;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -35,8 +36,9 @@
                     <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto">
                         <div class=" table-responsive">
                             <div class="table-responsive-sm">
-                                <table id="record-table" style="height: 200px;" class="table  table-hover table-fixed-height">
-                                    <thead class="table-dark">
+                                <table id="record-table" style="height: 200px;"
+                                    class="table  table-hover table-fixed-height">
+                                    <thead class="table-dark1">
                                         <tr>
                                             <th>
                                                 <h5 class="mt-2 text-center fw-bold">NOMBRE DE AGENTE</h5>
@@ -65,12 +67,13 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto ">
-            <div class="row p-2">
+        <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto" style="margin-top: 80px;">
+            <h5 class="titulo">TIEMPOS DE CASOS POR AGENTES</h5>
+            <div class="row">
                 <div class="col-12 col-sm-10 col-md-12 col-lg-4 mx-auto mb-4 p-2">
                     <div class=" mb-3 col">
-                        <select id="departamento" data-placeholder="Seleccione Departamento" class="roundedInput form-select" name="departamento"
-                            required onchange="cargarAgentes()">
+                        <select id="departamento" data-placeholder="Seleccione Departamento"
+                            class="roundedInput form-select" name="departamento" required onchange="cargarAgentes()">
                             <option value="Admisiones">Admisiones</option>
                             <option value="Registro">Registro</option>
                             <option value="Cursos Libres">Cursos Libres</option>
@@ -80,7 +83,8 @@
                 </div>
                 <div class="col-12 col-sm-10 col-md-12 col-lg-4 mx-auto mb-4 p-2">
                     <div class=" mb-3 col">
-                        <select id="agente_select" class="roundedInput form-select" name="agente_select" data-placeholder="Seleccion Agente">
+                        <select id="agente_select" class="roundedInput form-select" name="agente_select"
+                            data-placeholder="Seleccion Agente">
                             <option style="opacity: 0.65" value="" disabled selected hidden>Seleccione Agente</option>
                         </select>
                     </div>
@@ -90,51 +94,56 @@
                         <input type="date" class="roundedInput form-control" id="date" />
                     </div>
                 </div>
-                <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto mb-4 p-2">
-                    <div class=" table-responsive px-md-4 px-2 pt-3">
-                        <div class="table-responsive-sm">
-                            <table id="record-table2" style="height: 200px;" class="table  table-hover table-fixed-height">
-                                <thead class="table-dark">
-                                    <tr>
-                                        <th>
-                                            <h5 class="mt-2 text-center fw-bold">AGENTE</h5>
-                                        </th>
-                                        <th>
-                                            <h5 class="mt-2 text-center fw-bold">CODIGO</h5>
-                                        </th>
-                                        <th>
-                                            <h5 class="mt-2 text-center fw-bold">FECHA</h5>
-                                        </th>
-                                        <th>
-                                            <h5 class="mt-2 text-center fw-bold">TIMEPO DE INICIO</h5>
-                                        </th>
-                                        <th>
-                                            <h5 class="mt-2 text-center fw-bold">TIEMPO DE FIN</h5>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for record in records %}
-                                    <tr class="colorfilas">
-                                        <td class="text-center align-middle">
-                                            <h5 id="id_agente">{{ record.agente_id }}</h5>
-                                        </td>
-                                        <td class="text-center align-middle">
-                                            <h5>{{ record.codigoCaso }}</h5>
-                                        </td>
-                                        <td class="text-center align-middle">
-                                            <h5 id="fecha">{{ record.fecha }}</h5>
-                                        </td>
-                                        <td class="text-center align-middle">
-                                            <h5>{{ record.tiempoInicio }}</h5>
-                                        </td>
-                                        <td class="text-center align-middle">
-                                            <h5>{{ record.tiempoFinal }}</h5>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
+                <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto mb-4">
+                    <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto">
+                        <div class=" table-responsive">
+                            <button id="export-button" type="button" class="btn btn-outline-dark mb-2"
+                                onclick="exportToExcel()">Exportar a Excel</button>
+                            <div class="table-responsive-sm">
+                                <table id="record-table2" style="height: 200px;"
+                                    class="table  table-hover table-fixed-height">
+                                    <thead class="table-dark1">
+                                        <tr>
+                                            <th>
+                                                <h5 class="mt-2 text-center fw-bold">AGENTE</h5>
+                                            </th>
+                                            <th>
+                                                <h5 class="mt-2 text-center fw-bold">CÓDIGO</h5>
+                                            </th>
+                                            <th>
+                                                <h5 class="mt-2 text-center fw-bold">FECHA</h5>
+                                            </th>
+                                            <th>
+                                                <h5 class="mt-2 text-center fw-bold">TIEMPO DE INICIO</h5>
+                                            </th>
+                                            <th>
+                                                <h5 class="mt-2 text-center fw-bold">TIEMPO DE FIN</h5>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for record in records %}
+                                        <tr class="colorfilas">
+                                            <td class="text-center align-middle">
+                                                <h5 id="id_agente">{{ record.agente_id }}</h5>
+                                            </td>
+                                            <td class="text-center align-middle">
+                                                <h5>{{ record.codigoCaso }}</h5>
+                                            </td>
+                                            <td class="text-center align-middle">
+                                                <h5 id="fecha">{{ record.fecha }}</h5>
+                                            </td>
+                                            <td class="text-center align-middle">
+                                                <h5>{{ record.tiempoInicio }}</h5>
+                                            </td>
+                                            <td class="text-center align-middle">
+                                                <h5>{{ record.tiempoFinal }}</h5>
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -147,6 +156,10 @@
 
 
 <style>
+    .table-dark1{
+        background-color: black;
+        color: white;
+    }
     .roundedInput {
         border-radius: 50px;
         text-align: justify;
@@ -156,19 +169,25 @@
         font-family: 'Abrade';
         font-weight: 600;
     }
-    .titulo{
+
+    .titulo {
         text-align: end;
         font-size: 40px;
         font-weight: 900;
+        color: #000000;
     }
-    table {
+
+    table.dataTable {
         border-collapse: separate;
         width: 100%;
         border-spacing: 0 4px;
     }
-    .colorfilas{
+
+    .colorfilas {
         background-color: white;
+        border-color: transparent;
     }
+
     td:first-child,
     th:first-child {
         border-radius: 50px 0 0 50px;
@@ -181,6 +200,80 @@
 </style>
 
 <script>
+    $(document).ready(function () {
+        $('#record-table').DataTable({
+            select: true,
+            searching: false,
+            language: {
+                "sProcessing": "Procesando...",
+                "sLengthMenu": "Mostrar _MENU_ registros",
+                "sZeroRecords": "No se encontraron resultados",
+                "sEmptyTable": "Ningún dato disponible en esta tabla",
+                "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+                "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
+                "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+                "sInfoPostFix": "",
+                "sSearch": "Buscar:",
+                "sUrl": "",
+                "sInfoThousands": ",",
+                "sLoadingRecords": "Cargando...",
+                "oPaginate": {
+                    "sFirst": "Primero",
+                    "sLast": "Último",
+                    "sNext": "Siguiente",
+                    "sPrevious": "Anterior"
+                },
+                "oAria": {
+                    "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
+                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                },
+                "select": {
+                    "rows": {
+                        "_": "Seleccionado %d filas",
+                        "0": "Haga clic en una fila para seleccionarla",
+                        "1": "Seleccionado 1 fila"
+                    }
+                }
+            }
+        });
+    });
+    $(document).ready(function () {
+        $('#record-table2').DataTable({
+            select: true,
+            searching: false,
+            language: {
+                "sProcessing": "Procesando...",
+                "sLengthMenu": "Mostrar _MENU_ registros",
+                "sZeroRecords": "No se encontraron resultados",
+                "sEmptyTable": "Ningún dato disponible en esta tabla",
+                "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+                "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
+                "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+                "sInfoPostFix": "",
+                "sSearch": "Buscar:",
+                "sUrl": "",
+                "sInfoThousands": ",",
+                "sLoadingRecords": "Cargando...",
+                "oPaginate": {
+                    "sFirst": "Primero",
+                    "sLast": "Último",
+                    "sNext": "Siguiente",
+                    "sPrevious": "Anterior"
+                },
+                "oAria": {
+                    "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
+                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                },
+                "select": {
+                    "rows": {
+                        "_": "Seleccionado %d filas",
+                        "0": "Haga clic en una fila para seleccionarla",
+                        "1": "Seleccionado 1 fila"
+                    }
+                }
+            }
+        });
+    });
     window.onload = function () {
         cargarAgentes();
         var dateInput = document.getElementById("date");
@@ -248,7 +341,32 @@
 
     // Obtener la referencia al select del agente
     var agenteSelect = document.getElementById("agente_select");
+    var fechaSelect = document.getElementById("date");
 
+    fechaSelect.addEventListener("change", function () {
+        var selectedAgenteId = agenteSelect.value; // Obtener el ID del agente seleccionado
+        // Obtener todas las filas de la tabla
+        var rows = document.querySelectorAll("#record-table2 tbody tr");
+
+        // Iterar sobre cada fila y ocultar aquellas que no coincidan con el agente seleccionado
+        rows.forEach(function (row) {
+            var agente = row.querySelector("#id_agente").textContent; // Obtener el ID del agente en la fila
+            var fecha = row.querySelector("#fecha").textContent;
+            var dateInput = document.getElementById("date");
+
+            // Agregar un evento de escucha para capturar el cambio de fecha
+            var selectedDate = dateInput.value; // Obtener la fecha seleccionada en formato "yyyy-mm-dd"
+
+            // Formatear la fecha como "aaaa-mm-dd"
+            var formattedDate = selectedDate.split("-").join("-");
+            console.log(formattedDate);
+            if ((selectedAgenteId === "" || agente === selectedAgenteId) && (formattedDate === "" || fecha === formattedDate)) {
+                row.style.display = ""; // Mostrar la fila si no se seleccionó ningún agente o si coincide con el agente seleccionado
+            } else {
+                row.style.display = "none"; // Ocultar la fila si no coincide con el agente seleccionado
+            }
+        });
+    });
     // Agregar un evento de escucha para capturar el cambio de opción
     agenteSelect.addEventListener("click", function () {
         var selectedAgenteId = agenteSelect.value; // Obtener el ID del agente seleccionado
@@ -274,5 +392,46 @@
             }
         });
     });
+
+    function exportToExcel() {
+        // Obtener la tabla por su ID
+        const table = document.getElementById('record-table2');
+
+        // Crear un objeto de libro de Excel
+        const workbook = new ExcelJS.Workbook();
+        const worksheet = workbook.addWorksheet('Datos');
+
+        // Recorrer las filas y celdas de la tabla
+        const rows = table.querySelectorAll('tr');
+        rows.forEach((row, rowIndex) => {
+            const cells = row.querySelectorAll('td, th');
+            cells.forEach((cell, cellIndex) => {
+                // Obtener el contenido de la celda
+                const cellData = cell.innerText;
+                // Agregar el contenido a la hoja de Excel
+                worksheet.getCell(rowIndex + 1, cellIndex + 1).value = cellData;
+            });
+        });
+
+        // Crear un archivo Excel
+        workbook.xlsx.writeBuffer().then((buffer) => {
+            // Convertir el buffer a un blob
+            const blob = new Blob([buffer], { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
+
+            // Crear un objeto URL para el blob
+            const url = URL.createObjectURL(blob);
+
+            // Crear un enlace de descarga
+            const link = document.createElement('a');
+            link.href = url;
+            link.download = 'tabla_estados_casos.xlsx';
+
+            // Simular un clic en el enlace de descarga
+            link.click();
+
+            // Liberar el objeto URL
+            URL.revokeObjectURL(url);
+        });
+    }
 </script>
 {% endblock %}
