--- a/TicketsControl/tickets/templates/administracion/login.html
+++ b/TicketsControl/tickets/templates/administracion/login.html
@@ -4,7 +4,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <a class="btn navbar-brand" href="{% url 'home' %}">
-            <img src="{% static 'img/next.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-top">MENÚ PRINCIPAL
+            <div class="vertical-align">
+                <img src="{% static 'img/next.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-top">
+                <span class="d-inline-block align-middle">INICIO SESIÓN</span>
+            </div>
         </a>
     </div>
 </nav>
@@ -17,6 +20,12 @@
         outline: none !important;
         box-shadow: none !important;
     }
+    .vertical-align {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+      } 
 </style>
 {% endblock %}
 {% block content %}
@@ -65,7 +74,7 @@
                                 </div>
                             </div>
                             <div class="divRegistro">
-                                <a class="link-no-underline" style="color: white;" href="{% url 'registro_admin' %}">¿No está registrado? <span style="font-weight: bold; color: white;">Registrese</span></a>
+                                <a class="link-no-underline" style="color: white;" href="{% url 'registro_admin' %}">¿No estás registrado? <span style="font-weight: bold; color: white;">Regístrate</span></a>
                             </div>
                         </form>
                     </main>
@@ -126,15 +135,15 @@
     
     
     .btnStyle {
-        background-color: #1D1D1B;
+        background-color: #000000;
         color: #ffd142;
         border-radius: 50px;
-        border-color: #1D1D1B;
+        border-color: #000000;
         font-size: 25px;
     }
     .btnStyle:hover {
         background-color: #ffd142;
-        color: #1D1D1B;
+        color: #000000;
         border-color: #ffd142;
     }
 </style>
