--- a/TicketsControl/tickets/templates/ticket/ticketdigital.html
+++ b/TicketsControl/tickets/templates/ticket/ticketdigital.html
@@ -29,6 +29,7 @@
         font-size: 25px;
         font-weight: 550;
         margin-bottom: 1rem;
+        letter-spacing: 3px;
     }
 
     .titulo2 {
